# education_sql

./: .gitignore  AGENTS.md  README.md
docs/: 需求说明.md  (+1 more)
education_brain/knowledge/: .env.example  main.py  pyproject.toml
education_brain/knowledge/analytics/: __init__.py  build_meta.py  join_planner.py  meta_store.py  search.py
education_brain/knowledge/api/: app.py
education_brain/knowledge/core/: clients.py  config.py  errors.py  llm.py  structured_llm.py
education_brain/knowledge/models/: chat.py  course.py  document.py  ingest.py  intent.py  question.py
education_brain/knowledge/processor/: catalog_parser.py  catalog_store.py  chunker.py  document_store.py  docx_converter.py  embedder.py  image_uploader.py  mapping_rules.py  markdown_parser.py  milvus_store.py  question_parser.py  question_store.py  task_store.py
education_brain/knowledge/prompt/: query_prompt.py
education_brain/knowledge/runtime/: __init__.py  checkpointer.py  errors.py  graph_runner.py  result_projector.py  trace_projector.py
education_brain/knowledge/service/: chat_formatter.py  chat_history.py  chat_stream.py  chat_sync.py  course_search.py  document_search.py  intent_classifier.py  question_search.py
education_brain/knowledge/tests/: data_qa_test_fixtures.py  smoke_test_api.sh  smoke_test_data_qa.sh  sse_stream_acceptance.py  test_answer_generate.py  test_catalog_parser.py  test_chat_formatter.py  test_chat_history.py  test_chat_routes.py  test_chat_stream.py  test_chunker.py  test_clients.py  test_config.py  test_course_search.py  test_data_qa_pipeline.py  test_demo_data_admin.py  test_document_pipeline.py  test_document_search.py  test_docx_converter.py  test_embedder.py  test_health.py  test_hyde_search.py  test_imports.py  test_ingest_routes.py  test_intent_classifier.py  test_llm.py  test_llm_nl2sql_pipeline.py  test_main.py  test_markdown_parser.py  test_meta_qa_pipeline.py  test_milvus_store.py  test_query_graph.py  test_question_parser.py  test_question_search.py  test_rerank.py
(+137 files in other folders)
