[project]
name = "knowledge"
version = "0.1.0"
description = "WoDe教育 - 企业级智能教育系统（基于 RAG 技术）"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "grandalf>=0.8",
    "openai>=1.50.0",
    "openai-agents>=0.1.0",
    "pymilvus[model]>=2.4.0",
    "sentence-transformers>=3.0.0",
    "FlagEmbedding>=1.2.0",
    "pymongo>=4.8.0",
    "minio>=7.2.0",
    "mineru[all]>=1.0.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandoc>=2.4",
    "markitdown>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
