[project]
name = "knowledge"
version = "0.1.0"
description = "Education analytics question-answering backend"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.0,<2.0.0",
    "langgraph-checkpoint>=4.1.0,<5.0.0",
    "langgraph-checkpoint-mongodb>=0.4.0,<0.5.0",
    "grandalf>=0.8",
    "openai>=1.50.0",
    "pymongo>=4.8.0",
    "pymysql>=1.1.0",
    "qdrant-client>=1.11.0",
    "elasticsearch>=8.15.0,<9.0.0",
    "pyyaml>=6.0.0",
    "jieba>=0.42.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
